...

    <android.support.design.widget.FloatingActionButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        app:backgroundTint="@color/colorAccent"
        android:id="@+id/button_clear"
        android:onClick="button_Click"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_refresh" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="fill_parent"
...
